--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
-    "@angular/material": "^16.2.2",
+    "@angular/material": "^16.2.7",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "cors": "^2.8.5",
     "mdb-angular-ui-kit": "^5.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "^16.2.1",
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/body-parser": "^1.19.3",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
